My .gitignore tweaks, please ignore ;)

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 *.pyc
 build
 landslide/.idea
-presentation.html
 *.pdf
 samples/.DS_Store
 *.swp
@@ -9,3 +8,7 @@ src/landslide.egg-info/
 dist/
 *.komodoproject
 .komodotools
+# Eclipse project
+.project
+.pydevproject
+.settings
